--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   }
 </style>
 <html>
+<title>Cottage Craft Installation</title>
   <body>
     <span>Last Updated: <b>04/22/2024</b></span>
     <br />
