--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   html * {
     color: #f8f8f2;
     font-size: 1em;
+font-family: Arial !important;
     background-color: #282a36;
   }
 
@@ -23,7 +24,7 @@
   }
 </style>
 <html>
-<title>Cottage Craft Installation</title>
+<title>Modpack Installation</title>
   <body>
     <span>Last Updated: <b>04/22/2024</b></span>
     <br />
