--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@ font-family: Arial !important;
       </li>
       <li>Press "Add Instance", then on the left select "Import"</li>
       <li>
-        Import the following .zip file:
+        Import the following .mrpack file:
         <a
-          href="https://www.dropbox.com/scl/fi/0j8dbtzflhfop9n36l3rj/Cottage-Craft.zip?rlkey=c3do7my9luzikfr3ydl1aii5d&st=og0dhp7d&dl=0"
-          >Cottage-Craft.zip</a
+          href="https://www.dropbox.com/scl/fi/9pc9gww3s90b84nx85aeb/Cottage-Craft.mrpack?rlkey=fg8s2iz4htuyj60h3jfl7tzax&st=p0ly90vz&dl=0"
+          >Cottage Craft.mrpack</a
         >
-        <span>[452.98MB]</span>
+        <span>[16.33MB]</span>
       </li>
     </ul>
     <h2>MODS:</h2>
