--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ font-family: Arial !important;
       <li>
         Import the following .mrpack file:
         <a
-          href="https://www.dropbox.com/scl/fi/9pc9gww3s90b84nx85aeb/Cottage-Craft.mrpack?rlkey=fg8s2iz4htuyj60h3jfl7tzax&st=p0ly90vz&dl=0"
+          href="https://www.dropbox.com/scl/fi/ybtgs0vdenmj5tp4r9jao/Cottage-Craft.mrpack?rlkey=llal7mzgilrt5yv9lsf2ym289&st=usabccif&dl=0"
           >Cottage Craft.mrpack</a
         >
-        <span>[16.33MB]</span>
+        <span>[16.35MB]</span>
       </li>
     </ul>
     <h2>MODS:</h2>
