--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </style>
 <html>
   <title>Modpack Installation</title>
-  <body>
+  <body onload="sortModList()">
     <span>Last Updated: <b>04/22/2024</b></span>
     <br />
     <h2>INSTALLATION:</h2>
@@ -51,7 +51,7 @@
     </ul>
     <h2>MODS:</h2>
     <hr />
-    <ul id="modList">
+    <ul class="modList">
       <li>
         <a href="https://www.curseforge.com/projects/639653"
           >Dave's Potioneering</a
@@ -892,67 +892,32 @@
         <span>[7.0.2] by cominixo, TreyRuffy</span>
       </li>
     </ul>
-    <script>
-      function sortListDir() {
-        var list,
-          i,
-          switching,
-          b,
-          shouldSwitch,
-          dir,
-          switchcount = 0
-        list = document.getElementById('modList')
-        switching = true
-        // Set the sorting direction to ascending:
-        dir = 'asc'
-        // Make a loop that will continue until no switching has been done:
-        while (switching) {
-          // start by saying: no switching is done:
-          switching = false
-          b = list.getElementsByTagName('LI')
-          // Loop through all list-items:
-          for (i = 0; i < b.length - 1; i++) {
-            //start by saying there should be no switching:
-            shouldSwitch = false
-            /* check if the next item should switch place with the current item,
-      based on the sorting direction (asc or desc): */
-            if (dir == 'asc') {
-              if (
-                b[i].innerHTML.toLowerCase() > b[i + 1].innerHTML.toLowerCase()
-              ) {
-                /* if next item is alphabetically lower than current item,
-          mark as a switch and break the loop: */
-                shouldSwitch = true
-                break
-              }
-            } else if (dir == 'desc') {
-              if (
-                b[i].innerHTML.toLowerCase() < b[i + 1].innerHTML.toLowerCase()
-              ) {
-                /* if next item is alphabetically higher than current item,
-          mark as a switch and break the loop: */
-                shouldSwitch = true
-                break
-              }
-            }
-          }
-          if (shouldSwitch) {
-            /* If a switch has been marked, make the switch
-      and mark that a switch has been done: */
-            b[i].parentNode.insertBefore(b[i + 1], b[i])
-            switching = true
-            // Each time a switch is done, increase switchcount by 1:
-            switchcount++
-          } else {
-            /* If no switching has been done AND the direction is "asc",
-      set the direction to "desc" and run the while loop again. */
-            if (switchcount == 0 && dir == 'asc') {
-              dir = 'desc'
-              switching = true
-            }
-          }
-        }
-      }
-    </script>
   </body>
 </html>
+<script>
+  function sortModList() {
+    sortList(document.getElementsByClassName('modList')[0]);
+  }
+
+  function sortList(ul){
+    var new_ul = ul.cloneNode(false);
+
+    // Add all lis to an array
+    var lis = [];
+    for(var i = ul.childNodes.length; i--;){
+        if(ul.childNodes[i].nodeName === 'LI')
+            lis.push(ul.childNodes[i]);
+    }
+
+    // Sort the lis in descending order
+    lis.sort(function(a, b){
+       return parseInt(b.childNodes[0].data , 10) - 
+              parseInt(a.childNodes[0].data , 10);
+    });
+
+    // Add them into the ul in order
+    for(var i = 0; i < lis.length; i++)
+        new_ul.appendChild(lis[i]);
+    ul.parentNode.replaceChild(new_ul, ul);
+}
+</script>
