--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
       </li>
       <li>Press "Add Instance", then on the left select "Import"</li>
       <li>
-        Import the following .mrpack file:
+        Import the following .mrpack file, you might need to manually select .mrpack instead of .zip on the bottom right of the file exporer:
         <a
-          href="https://www.dropbox.com/scl/fi/ybtgs0vdenmj5tp4r9jao/Cottage-Craft.mrpack?rlkey=llal7mzgilrt5yv9lsf2ym289&st=usabccif&dl=0"
+          href="https://www.dropbox.com/scl/fi/j9q40b7yemjfbmljb99y0/Cottage-Craft.mrpack?rlkey=guxds23272lbdqfibs2f8yhif&st=1r5gifk0&dl=0"
           >Cottage Craft.mrpack</a
         >
         <span>[16.35MB]</span>
