--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <html>
   <title>Modpack Installation</title>
   <body onload="sort()">
-    <span>Last Updated: <b>04/22/2024</b></span>
+    <span>Last Updated: <b>04/23/2024 01:24PM CST</b></span>
     <br />
     <h2>INSTALLATION:</h2>
     <hr />
@@ -46,10 +46,10 @@
       <li>
         Import the following .mrpack file, you might need to manually select .mrpack instead of .zip on the bottom right of the file exporer:
         <a
-          href="https://www.dropbox.com/scl/fi/rh1oydiswpian00c2m6xb/Cottage-Craft-Optional-Shader.mrpack?rlkey=nhknvbfhqmsoifjlatc8mt05x&st=jmwtwlos&dl=0"
+          href="https://www.dropbox.com/scl/fi/7c6f92jnchk3klc9ovbov/Cottage-Craft-Optional-Shader.mrpack?rlkey=wapacf0swk3ky9m3iplnkp3ht&st=06jn7pr8&dl=0"
           >Cottage Craft (Optional Shader).mrpack</a
         >
-        <span>[16.4MB]</span>
+        <span>[17.25MB]</span>
       </li>
     </ol>
     <h2>MODS:</h2>
