--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <html>
   <title>Modpack Installation</title>
   <body onload="sort()">
-    <span>Last Updated: <b>04/23/2024 01:24PM CST</b></span>
+    <span>Last Updated: <b>04/23/2024 06:46PM CST</b></span>
     <br />
     <h2>INSTALLATION:</h2>
     <hr />
@@ -46,7 +46,7 @@
       <li>
         Import the following .mrpack file, you might need to manually select .mrpack instead of .zip on the bottom right of the file exporer:
         <a
-          href="https://www.dropbox.com/scl/fi/7c6f92jnchk3klc9ovbov/Cottage-Craft-Optional-Shader.mrpack?rlkey=wapacf0swk3ky9m3iplnkp3ht&st=06jn7pr8&dl=0"
+          href="https://www.dropbox.com/scl/fi/7l14i3v76d4heowjrglsd/Cottage-Craft-Optional-Shader.mrpack?rlkey=sm4jf2fmz0285eaxsga7caf08&st=ov1l9134&dl=0"
           >Cottage Craft (Optional Shader).mrpack</a
         >
         <span>[17.25MB]</span>
