--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         Import the following .mrpack file, you might need to manually select .mrpack instead of .zip on the bottom right of the file exporer:
         <a
           href="https://www.dropbox.com/scl/fi/m5gxyraowfkhbc128oxn9/Cottage-Craft.zip?rlkey=6sdhsnbpx5o02a5jdrw5lxbqp&st=oga1v3it&dl=0"
-          >Cottage Craft (Optional Shader).mrpack</a
+          >Cottage Craft.zip</a
         >
-        <span>[17.25MB]</span>
+        <span>[82.07MB]</span>
       </li>
     </ol>
     <h2>MODS:</h2>
