--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <html>
   <title>Modpack Installation</title>
   <body onload="sort()">
-    <span>Last Updated: <b>04/25/2024 05:04PM CST</b></span>
+    <span>Last Updated: <b>04/25/2024 05:23PM CST</b></span>
     <br />
     <h2>INSTALLATION:</h2>
     <hr />
@@ -46,10 +46,13 @@
       <li>
         Import the following .mrpack file, you might need to manually select .mrpack instead of .zip on the bottom right of the file exporer:
         <a
-          href="https://www.dropbox.com/scl/fi/m5gxyraowfkhbc128oxn9/Cottage-Craft.zip?rlkey=6sdhsnbpx5o02a5jdrw5lxbqp&st=oga1v3it&dl=0"
+          href="https://www.dropbox.com/scl/fi/6pfldsy9a40voecvigo2h/Cottage-Craft-Hotfix.zip?rlkey=fsv40jbf2liz04rfw8nspq9fn&st=6vvvq54d&dl=0"
           >Cottage Craft.zip</a
         >
-        <span>[82.07MB]</span>
+        <span>[82.85MB]</span>
+      </li>
+      <li>
+        If prompted that "blocked mods are found," just hit ok. I included these mods in the override and they will be added for you still. 
       </li>
     </ol>
     <h2>MODS:</h2>
