--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       <li>
         Download and Install
         <a
-          href="https://github.com/PrismLauncher/PrismLauncher/releases/download/8.2/PrismLauncher-Windows-MSVC-Setup-8.2.exe"
-          >Prism Launcher</a
+          href="https://atlauncher.com/download/exe-setup"
+          >ATLauncher</a
         >
         <span>[18.98MB]</span>
       </li>
@@ -42,17 +42,14 @@
         Make sure you've logged into your account. You can verify that you are
         by ensuring your profile displays on the top right
       </li>
-      <li>Press "Add Instance", then on the left select "Import"</li>
+      <li>Press "Instances", then on the left select "Import"</li>
       <li>
-        Import the following .mrpack file, you might need to manually select .mrpack instead of .zip on the bottom right of the file exporer:
+        Import the following .zip file, you might need to manually select .mrpack instead of .zip on the bottom right of the file exporer:
         <a
-          href="https://www.dropbox.com/scl/fi/6pfldsy9a40voecvigo2h/Cottage-Craft-Hotfix.zip?rlkey=fsv40jbf2liz04rfw8nspq9fn&st=6vvvq54d&dl=0"
-          >Cottage Craft.zip</a
+          href="https://drive.google.com/file/d/1Ecm2T4F7D-k-pMziZV_Kovl4tbNb-IM7/view?usp=sharing"
+          >Remade & Remastered (Custom) 1.21.zip</a
         >
-        <span>[82.85MB]</span>
-      </li>
-      <li>
-        If prompted that "blocked mods are found," just hit ok. I included these mods in the override and they will be added for you still. 
+        <span>[17.3MB]</span>
       </li>
     </ol>
     <h2>MODS:</h2>
