--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </li>
       <li>Press "Instances", then on the left select "Import"</li>
       <li>
-        Import the following .zip file, you might need to manually select .mrpack instead of .zip on the bottom right of the file exporer:
+        Import the following .zip file:
         <a
           href="https://drive.google.com/file/d/1Ecm2T4F7D-k-pMziZV_Kovl4tbNb-IM7/view?usp=sharing"
           >Remade & Remastered (Custom) 1.21.zip</a
