--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           href="https://atlauncher.com/download/exe-setup"
           >ATLauncher</a
         >
-        <span>[18.98MB]</span>
+        <span>[2.77MB]</span>
       </li>
       <li>
         Make sure you've logged into your account. You can verify that you are
@@ -46,9 +46,12 @@
       <li>
         Import the following .zip file:
         <a
-          href="https://drive.google.com/file/d/1Ecm2T4F7D-k-pMziZV_Kovl4tbNb-IM7/view?usp=sharing"
+          href="https://drive.google.com/file/d/1Ecm2T4F7D-k-pMziZV_Kovl4tbNb-IM7/view?usp=drive_link"
           >Remade & Remastered (Custom) 1.21.zip</a
         >
         <span>[17.3MB]</span>
+      </li>
+      <li>
+        Connect to the server using the IP: 37.10.122.52:25696
       </li>
     </ol>
