--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
         <span>[2.77MB]</span>
       </li>
       <li>
-        Make sure you've logged into your account. You can verify that you are
-        by ensuring your profile displays on the top right
+        Make sure you've logged into your account (likely will prompt you to login via microsoft account)
       </li>
       <li>Press "Instances", then on the left select "Import"</li>
       <li>
